make basic DOM with some styling

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,19 @@
-<html>
-<body>
-  <script src="./index.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>CSS Regression Testing</title>
+    <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <main>
+      <h1>CSS Regression Testing</h1>
+      <p>Where good things go bad</p>
+    </main>
+
+    <script src="./index.js"></script>
+  </body>
 </html>
-  
